# Hangeul-mcp

./: .gitignore  .ralph-addressed-editing-ledger.jsonl  ADDRESSED_EDITING_RELIABILITY_RALPH.md  CHANGELOG.md  HANDOFF.md  LICENSE  PENDING_DESKTOP_LIVE_QA.md  README.md  SAFE_FULL_EDITOR_EXPANSION_RALPLAN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.omo/evidence/: byo-ai-harness-code-review.md  byo-ai-harness-rereview-code-review.md
.omo/plans/: hangeul-mcp-byo-ai-live-harness.md  hangeul-mcp-current-next-work.md  hangeul-mcp-stabilization-ralplan.md  (+3 more)
docs/: ADDRESSED_FORMATTING_STRUCTURE_PLAN.md  DECISIONS.md  PLAN.md  ROADMAP.md  SECURITY.md  architecture.md  byo-ai-harness.md  feature-implementation-workflow.md  formative-assessment-device-test.md  formative-assessment-sample-spec.json  gap-analysis.md  live-qa-runbook.md  prd.json  progress.txt  qa-codex-phaseA-D.md  qa-codex-v0.1.0.md  research-strategy.md  test-scenarios.md
hangeul_core/: __init__.py  addressed.py  analyze.py  assessment_adapter.py  assessment_apply.py  assessment_bundle.py  assessment_cleanup.py  assessment_compiler.py  assessment_observability.py  assessment_plan.py  assessment_profile.py  assessment_provenance.py  assessment_publish.py  assessment_qa.py  assessment_quality.py  assessment_rubric.py  assessment_session.py  assessment_session_models.py  assessment_spec.py  assessment_spec_models.py  assessment_values.py  assessment_workflow.py  blocks.py  body.py  capabilities.py  charpr.py  checkbox.py  convert.py  delegate.py  delegate_base.py  delegate_edit.py  delegate_generate.py  document_spec.py  edit.py  edit_session.py  extract.py  fill.py  formfield.py  formfit.py  hwp_headless.py  (+14 more)
hangeul_mcp/: __init__.py  client_config.py  doctor.py  envelope.py  launcher.py  live_current.py  live_preview.py  manage.py  managed.py  server.py  tools_assessment.py  tools_core.py  tools_delegate.py  tools_file_edit.py  tools_live.py  tools_live_table.py  tools_read.py
prototype/: README.md  fill_template.py  fix_formatting.py
scripts/: check_artifact_hygiene.py  complete_and_load_capture.py  dirty_probe_capture.py  e2e_evidence.py  install.ps1  live_addressed_capture.py  shell_rot_spike_probe.py  windows_live_regression_harness.py
skills/: SKILL.md
tests/: test_addressed_bold.py  test_addressed_e2e.py  test_addressed_editing.py  test_addressed_quality.py  test_addressed_structure.py  test_addressed_table_delete.py  test_analyze.py  test_assessment_apply.py  test_assessment_cleanup.py  test_assessment_compiler.py  test_assessment_e2e.py  test_assessment_hygiene.py  test_assessment_import_boundaries.py  test_assessment_information_flow.py  test_assessment_no_optionals.py  test_assessment_observability.py  test_assessment_profile.py  test_assessment_publish.py  test_assessment_quality.py  test_assessment_session.py  test_assessment_spec.py  test_assessment_tools.py  test_blocks.py  test_body.py  test_capabilities.py  test_capacity_hint.py  test_checkbox.py  test_checkbox_labels.py  test_client_official_docs.py  test_client_setup.py  test_client_stdio.py  test_codex_regressions.py  test_com.py  test_compact_inspect.py  test_convert.py  test_current_complete_and_load.py  test_delegate_api_surface.py  test_delegate_document_spec.py  test_delegate_edit.py  test_delegate_edit_session.py  (+64 more)
(+46 files in other folders)
