[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hangeul-mcp"
version = "0.1.0"
description = "MCP server for Korean HWP/HWPX form understanding and format-preserving fill"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hangeul-mcp contributors" }]
keywords = ["hwp", "hwpx", "hancom", "korean", "mcp", "form-fill", "owpml"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Natural Language :: Korean",
]
# Runtime deps added per-story: python-hwpx (US-002 validation, optional) is soft.
dependencies = ["mcp>=1.2.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]
com = ["pywin32>=306; sys_platform == 'win32'"]

[project.scripts]
hangeul-mcp = "hangeul_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["hangeul_core", "hangeul_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
