[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hangeul-mcp"
version = "0.4.0"
description = "MCP server for Korean HWP/HWPX form understanding and format-preserving fill"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hangeul-mcp contributors" }]
keywords = ["hwp", "hwpx", "hancom", "korean", "mcp", "form-fill", "owpml"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Natural Language :: Korean",
]
# Runtime deps added per-story: python-hwpx (US-002 validation, optional) is soft.
dependencies = [
  "mcp>=1.2.0",
  "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pyflakes>=3"]
com = ["pywin32>=306; sys_platform == 'win32'"]
# Delegated breadth (editing/generation/rich export) — soft dependency (D1).
# The core works without it; delegate tools return available:false when absent.
# Floor 2.24 = header/footer + page-setup + split_merged_cell surface (ADR D13);
# <3 isolates major bumps only — runtime feature-detect covers minor drift (BC1).
delegate = ["python-hwpx>=2.24,<3"]
render = ["playwright>=1.45"]
# Live cell-fill of the OPEN Hangul window (Windows + Hangul only) via pyhwpx.
# Optional; apply_small_live_label_cells returns available:false without it.
# pyhwpx 1.7 imports numpy/pandas/pyperclip/PIL at module import but does NOT
# declare them (observed 2026-07-10: installed-yet-unimportable pyhwpx
# masqueraded as live_available:false). Declare them here so the extra works.
live = [
  "pyhwpx>=1.7; sys_platform == 'win32'",
  "numpy; sys_platform == 'win32'",
  "pandas; sys_platform == 'win32'",
  "pyperclip; sys_platform == 'win32'",
  "pillow; sys_platform == 'win32'",
]
hwp-headless = []

[project.scripts]
hangeul-mcp = "hangeul_mcp.server:main"
hangeul-mcp-manage = "hangeul_mcp.manage:main"

[tool.hatch.build.targets.wheel]
packages = ["hangeul_core", "hangeul_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "hangeul_core/",
  "hangeul_mcp/",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
